# Cheetah-Software-He

./: .gitignore  CMakeLists.txt  README.md
AutomationBashScripts/: run_ctrl.sh  run_lcmexport.sh  run_lcmlog.sh  run_mhpc.sh
AutomationPythonScripts/: .gitignore  lcm_exporter.py  pyAuto.py  readGRFs.py  read_mat.py  screen_cord.py  simple.py  starterMtlbCode.m
common/: CMakeLists.txt
common/include/: cppTypes.h
config/: default-terrain.yaml  default-user-parameters-file.yaml  imitation-user-parameters.yaml  mhpc-user-parameters-offline.yaml  mhpc-user-parameters.yaml  mhpcll-user-parameters.yaml  mini-cheetah-defaults.yaml  simulator-defaults.yaml  vwbc.info
documentation/: my_readme.md
lcm-types/: MHPC_Command_lcmt.lcm  MHPC_Data_lcmt.lcm  cheetah_visualization_lcmt.lcm  debug_tracking_lcmt.lcm  extForce_t.lcm  fly_control_command_lcmt.lcm  fly_control_data_lcmt.lcm  hkd_command_lcmt.lcm  leg_control_command_lcmt.lcm  mhpc_plan_2D_lcmt.lcm  reset_sim_t.lcm  simulator_lcmt.lcm  solver_info_lcmt.lcm  state_estimator_lcmt.lcm  udp_data_lcmt.lcm
lcm_types/: MHPC_Command_lcmt.lcm  controller_dt_debug_lcmt.lcm  extVelocity_lcmt.lcm  file_list.txt  leg_control_data_lcmt.lcm  mhpc_plan_3D_lcmt.lcm  vwbc_info_lcmt.lcm
lcm_types/cpp/: MHPC_Command_lcmt.hpp  controller_dt_debug_lcmt.hpp  debug_tracking_lcmt.hpp  extVelocity_lcmt.hpp  leg_control_command_lcmt.hpp  leg_control_data_lcmt.hpp  mhpc_plan_2D_lcmt.hpp  mhpc_plan_3D_lcmt.hpp  reset_sim_t.hpp  solver_info_lcmt.hpp  state_estimator_lcmt.hpp  vwbc_info_lcmt.hpp
lcm_types/lcmtypes/: MHPC_Command_lcmt.java  control_parameter_request_lcmt.java  control_parameter_respones_lcmt.java  controller_dt_debug_lcmt.java  debug_tracking_lcmt.java  (+11 more)
rc_test/: CMakeLists.txt
robot/: CMakeLists.txt
scripts/: debug_foot_opt.py  launch_lcm_spy.sh  launch_lcm_spy_jdk_fix.sh  log_convert.sh  make_types.sh  make_types_no_java.sh  mhpc_debug.sh  send_to_mini_cheetah.sh  setup_network_mc.py  test.py
sim/: CMakeLists.txt
urdf/: mini_cheetah_simple_correctedInertia.urdf
user/: CMakeLists.txt
user/Imitation_Controller/: CMakeLists.txt  ImitationUserParameters.h  Imitation_Controller.cpp  Imitation_Controller.hpp  Imitation_Controller_With_QP.cpp  Imitation_Controller_With_QP.hpp  Imitation_Reference.cpp  MPCSolver.cpp  MPCSolver.h  debug_HKDMPC.sh  debug_mpc_contact.py  debug_mpc_traj.py  debug_mpc_traj_ref.py  main.cpp  test.md
user/Imitation_Controller/HKD-TrajOpt/: CMakeLists.txt  HKDConstraints.h  HKDCost.cpp  HKDCost.h  HKDProblem.cpp  HKDProblem.h  HKDReference.h
user/Imitation_Controller/HKD-TrajOpt/HSDDPSolver/header/: ConstraintsBase.h
user/Imitation_Controller/HKD-TrajOpt/HSDDPSolver/source/: MultiPhaseDDP.cpp  SinglePhase.cpp  TrajectoryManagement.cpp
user/Imitation_Controller/PolicyRollout/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/In-place-trot/A1/: state_post.csv
user/Imitation_Controller/PolicyRollout/In-place-trot/mc/: state_post.csv
user/Imitation_Controller/PolicyRollout/left_turn/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/left_turn_center/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/pace/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/spin/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/towr/Continuous-Jumping/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/towr/JumpHigh/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/towr/Pronking-Jumping/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/towr/trotting/: contact_post.csv  state_post.csv
user/Imitation_Controller/PolicyRollout/trot/a1/: state_post.csv
user/Imitation_Controller/PolicyRollout/trot/mc/: contact_post.csv  state_post.csv
user/MHPC_LLController/: CMakeLists.txt  MHPCLLUserParameters.h  MHPC_LLController.cpp  MHPC_LLController.h  main.cpp
user/MHPC_LLController/VWBC/: CMakeLists.txt
user/MHPC_LLController/VWBC/include/: PinocchioInterface.h  Task.h  VWBC.h
user/MHPC_LLController/VWBC/src/: PinocchioInterface.cpp  VWBC.cpp
user/Tracking_Controller/: CMakeLists.txt  TCUserParameters.h  TrackingController.cpp  TrackingController.h  main.cpp
user/Tracking_Controller/VWBC/include/: VWBC.h
user/Tracking_Controller/VWBC/src/: PinocchioInterface.cpp  VWBC.cpp
user/VWBC/: CMakeLists.txt  Readme.md
user/VWBC/include/: HandC.h  MC_kinematics_casadi.h  VWBC.h  casadi_interface.h
user/VWBC/src/: HandC.cpp  MC_kinematics_casadi.cpp  VWBC.cpp  casadi_interface.cpp
(+115 files in other folders)
